src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.max-width {
  @apply lg:mx-auto lg:px-24 xl:px-48 px-5;
}

.text-content {
  @apply dark:text-light-content text-dark-content;
}

.icon-size{
    @apply w-14 h-14 flex items-center justify-center;

}
body {
  overflow-x: hidden;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

